k8s/mongo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        # command:
        #     - "numactl"
        #     - "--interleave=all"
        #     - "mongod"
        #     - "--wiredTigerCacheSizeGB"
        #     - "0.1"
        #     - "--bind_ip"
        #     - "0.0.0.0"
        ports:
        - containerPort: 27017
        resources:
          # requests:
          #   memory: "512Mi"
          #   cpu: "1000m"
          # limits:
          #   memory: "1Gi"
          #   cpu: "500m"
        volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: mongo-pv-claim
