k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-3-tier-app-ingress
  labels:
    name: k8s-3-tier-app-ingress
spec:
  rules:
  - host: 3-tier-app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend
            port: 
              number: 5000
  # - host: 3-tier-app-backend.com
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: backend
  #           port: 
  #             number: 5000
